--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1023,28 +1023,28 @@
     </div>
     <div xml:id="sandbox">
       <list xml:id="sandbox.list.1">
-        <listitem xml:id="sandbox.list.1.listitem.1" n="1">
-          <s xml:id="sandbox.list.1.listitem.1.s.1">
-            <w xml:id="sandbox.list.1.listitem.1.s.1.w.1">
+        <item xml:id="sandbox.list.1.item.1" n="1">
+          <s xml:id="sandbox.list.1.item.1.s.1">
+            <w xml:id="sandbox.list.1.item.1.s.1.w.1">
               <t>Eerste</t>
               <sense class="some.sense.id" synset="some.synset.id"/>
             </w>
-            <w xml:id="sandbox.list.1.listitem.1.s.1.w.2">
+            <w xml:id="sandbox.list.1.item.1.s.1.w.2">
               <t>testitem</t>
             </w>
           </s>
-        </listitem>
+        </item>
         <event xml:id="sandbox.event.0" actor="audience" class="applause"/>
-        <listitem xml:id="sandbox.list.1.listitem.2" n="2">
-          <s xml:id="sandbox.list.1.listitem.2.s.1">
-            <w xml:id="sandbox.list.1.listitem.2.s.1.w.1">
+        <item xml:id="sandbox.list.1.item.2" n="2">
+          <s xml:id="sandbox.list.1.item.2.s.1">
+            <w xml:id="sandbox.list.1.item.2.s.1.w.1">
               <t>Tweede</t>
             </w>
-            <w xml:id="sandbox.list.1.listitem.2.s.1.w.2">
+            <w xml:id="sandbox.list.1.item.2.s.1.w.2">
               <t>testitem</t>
             </w>
           </s>
-        </listitem>
+        </item>
       </list>
       <event xml:id="sandbox.event.1" actor="proycon" begindatetime="2011-12-15T19:01" class="presentation" enddatetime="2011-12-15T19:05">
         <figure xml:id="sandbox.figure.1" src="http://upload.wikimedia.org/wikipedia/commons/8/8e/Family_tree.svg">
