added nested event
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@17388 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1047,6 +1047,7 @@
         </item>
       </list>
       <event xml:id="sandbox.event.1" actor="proycon" begindatetime="2011-12-15T19:01" class="presentation" enddatetime="2011-12-15T19:05">
+        <event xml:id="sandbox.event.2" actor="audience" class="applause"/>
         <figure xml:id="sandbox.figure.1" src="http://upload.wikimedia.org/wikipedia/commons/8/8e/Family_tree.svg">
           <desc>Stamboom plaatje van wikipedia</desc>
           <caption xml:id="sandbox.figure.1.caption.1">
