--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1079,6 +1079,10 @@
       </entry>
     </div>
     <div xml:id="sandbox">
+      <head xml:id="sandbox.head">
+	<t>Tests van verschillende structuur en annotatieelementen</t>
+      </head>
+      <event xml:id="sandbox.event.0" actor="audience" class="applause"/>
       <list xml:id="sandbox.list.1">
         <item xml:id="sandbox.list.1.item.1" n="1">
           <s xml:id="sandbox.list.1.item.1.s.1">
@@ -1091,7 +1095,6 @@
             </w>
           </s>
         </item>
-        <event xml:id="sandbox.event.0" actor="audience" class="applause"/>
         <item xml:id="sandbox.list.1.item.2" n="2">
           <s xml:id="sandbox.list.1.item.2.s.1">
             <w xml:id="sandbox.list.1.item.2.s.1.w.1">
@@ -1104,7 +1107,6 @@
         </item>
       </list>
       <event xml:id="sandbox.event.1" actor="proycon" begindatetime="2011-12-15T19:01" class="presentation" enddatetime="2011-12-15T19:05">
-        <event xml:id="sandbox.event.2" actor="audience" class="applause"/>
         <figure xml:id="sandbox.figure.1" src="http://upload.wikimedia.org/wikipedia/commons/8/8e/Family_tree.svg">
           <desc>Stamboom plaatje van wikipedia</desc>
           <caption xml:id="sandbox.figure.1.caption.1">
@@ -1269,10 +1271,16 @@
           </row>
         </table>
       </div>
-      <note xml:id="footnote1">
-        <s xml:id="note1">
-          <t> Dit is een opmerking</t>
-        </s>
+      <note xml:id="footnote1" class="footnote">
+	<s xml:id="footnote.1.s.1">
+          <t>Een deel van deze pagina komt oorspronkelijk van <t-str xlink:type="simple" xlink:href="http://www.wikipedia.org">wikipedia</t-str>.</t>
+	</s>
+      </note>
+    </div>
+    <div xml:id="bibliography" class="bibliography">
+      <head xml:id="bibhead"><t>Bibliography</t></head>
+      <note xml:id="bib.1" class="bibref">
+	<t>G.J. van Bork, D. Delabastita, H. van Gorp, P.J. Verkruijsse en G.J. Vis - Algemeen Letterkunding lexicon. DBNL (2012)</t>
       </note>
     </div>
     <gap xml:id="WR-P-E-J-0000000001.gap.1" class="backmatter">
