added sets to AnnotationLayers.
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@18446 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -93,7 +93,7 @@
             <pos class="LET()"/>
             <lemma class="."/>
           </w>
-          <entities>
+          <entities set="mwu-set">
             <entity class="ander_woord" set="mwu-set">
               <wref id="WR-P-E-J-0000000001.p.1.s.1.w.4" t="ander"/>
               <!-- no idea why you would like to comment on this -->
@@ -1153,7 +1153,7 @@
           <w xml:id="WR-P-E-J-0000000001.sandbox.2.s.1.w.6">
             <t offset="37">.</t>
           </w>
-          <entities>
+          <entities set="mwu-set">
             <entity class="politicalparty" set="mwu-set">
               <wref id="WR-P-E-J-0000000001.sandbox.2.s.1.w.1.m.1" t="CDA"/>
             </entity>
@@ -1196,7 +1196,7 @@
               <w xml:id="example.table.1.w.5">
                 <t>Gompel</t>
               </w>
-              <entities>
+              <entities set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
                 <entity class="per" set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
                   <wref id="example.table.1.w.3" t="Maarten"/>
                   <wref id="example.table.1.w.4" t="van"/>
@@ -1214,7 +1214,7 @@
               <w xml:id="example.table.1.w.8">
                 <t>Nijmegen</t>
               </w>
-              <entities>
+              <entities set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
                 <entity xml:id="example.radboud.university.nijmegen.org" class="org" set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
                   <wref id="example.table.1.w.6" t="Radboud"/>
                   <wref id="example.table.1.w.7" t="University"/>
@@ -1237,7 +1237,7 @@
               <w xml:id="example.table.1.w.12">
                 <t>Sloot</t>
               </w>
-              <entities>
+              <entities set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
                 <entity class="per" set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
                   <wref id="example.table.1.w.9" t="Ko"/>
                   <wref id="example.table.1.w.10" t="van"/>
@@ -1253,7 +1253,7 @@
               <w xml:id="example.table.1.w.14">
                 <t>University</t>
               </w>
-              <entities>
+              <entities set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
                 <correction xml:id="span.correction" class="entity">
                   <new>
                     <entity xml:id="example.tilburg.university.org" class="org" set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
@@ -1279,7 +1279,9 @@
       </note>
     </div>
     <div xml:id="bibliography" class="bibliography">
-      <head xml:id="bibhead"><t>Bibliography</t></head>
+      <head xml:id="bibhead">
+	<t>Bibliography</t>
+      </head>
       <note xml:id="bib.1" class="bibref">
 	<t>G.J. van Bork, D. Delabastita, H. van Gorp, P.J. Verkruijsse en G.J. Vis - Algemeen Letterkunding lexicon. DBNL (2012)</t>
       </note>
