attempt to run myself as test
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@18824 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,3 +7,7 @@ AM_CXXFLAGS = -std=c++0x
 bin_PROGRAMS = foliatest
 
 foliatest_SOURCES = foliatest.cxx
+
+TESTS = tst.sh
+TESTS_ENVIRONMENT = topsrcdir=$(top_srcdir)
+EXTRA_DIST = tst.sh
