--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1105,6 +1105,9 @@
             </w>
           </s>
         </item>
+	<item xml:id="sandbox.list.1.listitem.3" n="3">
+
+	</item>
       </list>
       <event xml:id="sandbox.event.1" actor="proycon" begindatetime="2011-12-15T19:01" class="presentation" enddatetime="2011-12-15T19:05">
         <figure xml:id="sandbox.figure.1" src="http://upload.wikimedia.org/wikipedia/commons/8/8e/Family_tree.svg">
