--- a/tests/folia.example
+++ b/tests/folia.example
@@ -49,6 +49,7 @@
         </s>
       </head>
       <p xml:id="WR-P-E-J-0000000001.p.1" class="firstparagraph">
+        <alignment class="book" format="image/pdf" xlink:href="http://archief.nl/artikel.pdf" xlink:type="simple"/>
         <metric class="sentenceCount" value="8"/>
         <s xml:id="WR-P-E-J-0000000001.p.1.s.1">
           <w xml:id="WR-P-E-J-0000000001.p.1.s.1.w.1">
@@ -1060,7 +1061,7 @@
         </term>
         <def xml:id="entry.1.def.1" class="sense">
           <p xml:id="entry.1.def.1.p.1">
-            <t>Term uit de editiewetenschap en tekstkritiek voor de schematische weergave in de vorm van een boomdiagram van de onderlinge verwantschap van documentaire bronnen (handschrift, codex, druk), waarin een tekst bewaard is gebleven.</t>
+            <t>Term uit de editiewetenschap en tekstkritiek voor de schematische weergave in de vorm van een boomdiagram van de onderlinge verwantschap van <br linenr="1" newpage="yes" pagenr="23"/> documentaire bronnen (handschrift, codex, druk), waarin een tekst bewaard is gebleven.<br linenr="2"/></t>
           </p>
           <ref id="bib.1" type="note">
             <t>[Bork et al, 2012]</t>
@@ -1105,9 +1106,7 @@
             </w>
           </s>
         </item>
-	<item xml:id="sandbox.list.1.listitem.3" n="3">
-
-	</item>
+        <item xml:id="sandbox.list.1.listitem.3" n="3"/>
       </list>
       <event xml:id="sandbox.event.1" actor="proycon" begindatetime="2011-12-15T19:01" class="presentation" enddatetime="2011-12-15T19:05">
         <figure xml:id="sandbox.figure.1" src="http://upload.wikimedia.org/wikipedia/commons/8/8e/Family_tree.svg">
