closer to Python version

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1015,6 +1015,7 @@
           </coreferencelink>
           <coreferencelink>
             <wref id="WR-P-E-J-0000000001.p.1.s.7.w.7" t="de"/>
+	    <wref id="WR-P-E-J-0000000001.p.1.s.7.w.8" t="handschriften"/>
           </coreferencelink>
         </coreferencechain>
         <coreferencechain class="verdwenen_handschriften">
